# SuperApp.Government.Service.Backend

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
config/: settings.py
core/: __init__.py  celery.py  settings.py  urls.py
gov_portal_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
